@@ -1,33 +1,64 @@
 /*
- * Copyright 2020 Red Hat, Inc. and/or its affiliates.
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.kogito.workitem.rest;
 
-import java.net.URI;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.time.Duration;
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
-import java.util.function.UnaryOperator;
+import java.util.Optional;
+import java.util.ServiceLoader;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
-import org.kie.kogito.internal.process.runtime.KogitoWorkItem;
-import org.kie.kogito.internal.process.runtime.KogitoWorkItemHandler;
-import org.kie.kogito.internal.process.runtime.KogitoWorkItemManager;
+import org.jbpm.process.core.ContextResolver;
+import org.jbpm.process.core.context.variable.Variable;
+import org.jbpm.process.core.context.variable.VariableScope;
+import org.jbpm.workflow.core.node.WorkItemNode;
+import org.jbpm.workflow.instance.NodeInstance;
+import org.jbpm.workflow.instance.node.WorkItemNodeInstance;
+import org.kie.kogito.internal.process.workitem.KogitoWorkItem;
+import org.kie.kogito.internal.process.workitem.KogitoWorkItemHandler;
+import org.kie.kogito.internal.process.workitem.KogitoWorkItemManager;
+import org.kie.kogito.internal.process.workitem.WorkItemExecutionException;
+import org.kie.kogito.internal.process.workitem.WorkItemTransition;
+import org.kie.kogito.process.workitems.impl.DefaultKogitoWorkItemHandler;
+import org.kogito.workitem.rest.auth.ApiKeyAuthDecorator;
+import org.kogito.workitem.rest.auth.AuthDecorator;
+import org.kogito.workitem.rest.auth.BasicAuthDecorator;
+import org.kogito.workitem.rest.auth.BearerTokenAuthDecorator;
+import org.kogito.workitem.rest.bodybuilders.DefaultWorkItemHandlerBodyBuilder;
+import org.kogito.workitem.rest.bodybuilders.RestWorkItemHandlerBodyBuilder;
+import org.kogito.workitem.rest.decorators.ParamsDecorator;
+import org.kogito.workitem.rest.decorators.PrefixParamsDecorator;
+import org.kogito.workitem.rest.decorators.RequestDecorator;
+import org.kogito.workitem.rest.pathresolvers.DefaultPathParamResolver;
+import org.kogito.workitem.rest.pathresolvers.PathParamResolver;
+import org.kogito.workitem.rest.resulthandlers.DefaultRestWorkItemHandlerResult;
+import org.kogito.workitem.rest.resulthandlers.RestWorkItemHandlerResult;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import io.vertx.core.http.HttpMethod;
 import io.vertx.mutiny.core.buffer.Buffer;
@@ -35,120 +66,178 @@ import io.vertx.mutiny.ext.web.client.HttpRequest;
 import io.vertx.mutiny.ext.web.client.HttpResponse;
 import io.vertx.mutiny.ext.web.client.WebClient;
 
-public class RestWorkItemHandler implements KogitoWorkItemHandler {
+import static org.kie.kogito.internal.utils.ConversionUtils.isEmpty;
+import static org.kogito.workitem.rest.RestWorkItemHandlerUtils.getClassListParam;
+import static org.kogito.workitem.rest.RestWorkItemHandlerUtils.getClassParam;
+import static org.kogito.workitem.rest.RestWorkItemHandlerUtils.getParam;
 
-    public static final String REST_TASK_TYPE = "Rest Task";
-    public static final String ENDPOINT = "endpoint";
-    public static final String METHOD = "method";
-    public static final String PARAMETER = "Parameter";
+public class RestWorkItemHandler extends DefaultKogitoWorkItemHandler {
+
+    public static final String REST_TASK_TYPE = "Rest";
+    public static final String PROTOCOL = "Protocol";
+    public static final String URL = "Url";
+    public static final String METHOD = "Method";
+    public static final String CONTENT_DATA = "ContentData";
     public static final String RESULT = "Result";
+    public static final String USER = "Username";
+    public static final String PASSWORD = "Password";
+    public static final String HOST = "Host";
+    public static final String PORT = "Port";
     public static final String RESULT_HANDLER = "ResultHandler";
-    public static final String USER = "user";
-    public static final String PASSWORD = "password";
-    public static final String HOST = "host";
-    public static final String PORT = "port";
+    public static final String BODY_BUILDER = "BodyBuilder";
+    public static final String PARAMS_DECORATOR = "ParamsDecorator";
+    public static final String PATH_PARAM_RESOLVER = "PathParamResolver";
+    public static final String AUTH_METHOD = "AuthMethod";
 
-    // package scoped to allow unit test
-    static class RestUnaryOperator implements UnaryOperator<Object> {
+    public static final String REQUEST_TIMEOUT_IN_MILLIS = "RequestTimeout";
 
-        private Object inputModel;
+    public static final int DEFAULT_PORT = 80;
+    public static final int DEFAULT_SSL_PORT = 443;
 
-        public RestUnaryOperator(Object inputModel) {
-            this.inputModel = inputModel;
-        }
+    private static final Logger logger = LoggerFactory.getLogger(RestWorkItemHandler.class);
+    private static final RestWorkItemHandlerResult DEFAULT_RESULT_HANDLER = new DefaultRestWorkItemHandlerResult();
+    private static final RestWorkItemHandlerBodyBuilder DEFAULT_BODY_BUILDER = new DefaultWorkItemHandlerBodyBuilder();
+    private static final ParamsDecorator DEFAULT_PARAMS_DECORATOR = new PrefixParamsDecorator();
+    private static final PathParamResolver DEFAULT_PATH_PARAM_RESOLVER = new DefaultPathParamResolver();
+    private static final Map<String, RestWorkItemHandlerResult> resultHandlers = new ConcurrentHashMap<>();
+    private static final Map<String, RestWorkItemHandlerBodyBuilder> bodyBuilders = new ConcurrentHashMap<>();
+    private static final Map<String, ParamsDecorator> paramsDecorators = new ConcurrentHashMap<>();
+    private static final Map<String, PathParamResolver> pathParamsResolvers = new ConcurrentHashMap<>();
+    private static final Map<String, AuthDecorator> authDecoratorsMap = new ConcurrentHashMap<>();
+    private static final Collection<AuthDecorator> DEFAULT_AUTH_DECORATORS = Arrays.asList(new ApiKeyAuthDecorator(), new BasicAuthDecorator(), new BearerTokenAuthDecorator());
 
-        @Override
-        public Object apply(Object value) {
-            return value instanceof RestWorkItemHandlerParamResolver
-                    ? ((RestWorkItemHandlerParamResolver) value).apply(inputModel)
-                    : value;
-        }
-    }
+    protected final WebClient httpClient;
+    protected final WebClient httpsClient;
+    private Collection<RequestDecorator> requestDecorators;
 
-    private WebClient client;
-
-    public RestWorkItemHandler(WebClient client) {
-        this.client = client;
+    public RestWorkItemHandler(WebClient httpClient, WebClient httpsClient) {
+        this.httpClient = httpClient;
+        this.httpsClient = httpsClient;
+        this.requestDecorators = StreamSupport.stream(ServiceLoader.load(RequestDecorator.class).spliterator(), false).collect(Collectors.toList());
     }
 
     @Override
-    public void executeWorkItem(KogitoWorkItem workItem, KogitoWorkItemManager manager) {
-        // retrieving parameters
+    public Optional<WorkItemTransition> activateWorkItemHandler(KogitoWorkItemManager manager, KogitoWorkItemHandler handler, KogitoWorkItem workItem, WorkItemTransition transition) {
+        Class<?> targetInfo = getTargetInfo(workItem);
+        logger.debug("Using target {}", targetInfo);
+        //retrieving parameters
         Map<String, Object> parameters = new HashMap<>(workItem.getParameters());
-        String endPoint = getParam(parameters, ENDPOINT, String.class);
-        HttpMethod method = HttpMethod.valueOf(getParam(parameters, METHOD, String.class).toUpperCase());
-        Object inputModel = getParam(parameters, PARAMETER, Object.class);
-        String user = (String) parameters.remove(USER);
-        String password = (String) parameters.remove(PASSWORD);
-        String hostProp = (String) parameters.remove(HOST);
-        String portProp = (String) parameters.remove(PORT);
-        RestWorkItemHandlerResult resultHandler = getParam(parameters, RESULT_HANDLER, RestWorkItemHandlerResult.class);
+        //removing unnecessary parameter
+        parameters.remove("TaskName");
+        String endPoint = getParam(parameters, URL, String.class, null);
+        if (endPoint == null) {
+            throw new IllegalArgumentException("Missing required parameter " + URL);
+        }
+
+        HttpMethod method = getParam(parameters, METHOD, HttpMethod.class, HttpMethod.GET);
+        RestWorkItemHandlerResult resultHandler = getClassParam(parameters, RESULT_HANDLER, RestWorkItemHandlerResult.class, DEFAULT_RESULT_HANDLER, resultHandlers);
+        RestWorkItemHandlerBodyBuilder bodyBuilder = getClassParam(parameters, BODY_BUILDER, RestWorkItemHandlerBodyBuilder.class, DEFAULT_BODY_BUILDER, bodyBuilders);
+        ParamsDecorator paramsDecorator = getClassParam(parameters, PARAMS_DECORATOR, ParamsDecorator.class, DEFAULT_PARAMS_DECORATOR, paramsDecorators);
+        PathParamResolver pathParamResolver = getClassParam(parameters, PATH_PARAM_RESOLVER, PathParamResolver.class, DEFAULT_PATH_PARAM_RESOLVER, pathParamsResolvers);
+        Collection<? extends AuthDecorator> authDecorators = getClassListParam(parameters, AUTH_METHOD, AuthDecorator.class, DEFAULT_AUTH_DECORATORS, authDecoratorsMap);
+
+        logger.debug("Filtered parameters are {}", parameters);
         // create request
-        UnaryOperator<Object> resolver = new RestUnaryOperator(inputModel);
-        endPoint = resolvePathParams(endPoint, parameters, resolver);
-        URI uri = URI.create(endPoint);
-        String host = uri.getHost() != null ? uri.getHost() : hostProp;
-        int port = uri.getPort() > 0 ? uri.getPort() : Integer.parseInt(portProp);
-        HttpRequest<Buffer> request = client.request(method, port, host, uri.getPath());
-        if (user != null && !user.trim().isEmpty() && password != null && !password.trim().isEmpty()) {
-            request.basicAuthentication(user, password);
+        endPoint = pathParamResolver.apply(endPoint, parameters);
+
+        String protocol = null;
+        String host = null;
+        int port = -1;
+        String path = null;
+        try {
+            URL uri = new URL(endPoint);
+            protocol = uri.getProtocol();
+            host = uri.getHost();
+            port = uri.getPort();
+            path = uri.getPath();
+            String query = uri.getQuery();
+            if (!isEmpty(path) && !isEmpty(query)) {
+                path += "?" + query;
+            }
+        } catch (MalformedURLException ex) {
+            logger.debug("Parameter endpoint {} is not valid uri {}", endPoint, ex.getMessage());
         }
-        HttpResponse<Buffer> response;
-        if (method == HttpMethod.POST || method == HttpMethod.PUT) {
-            // if parameters is empty at this stage, assume post content is the whole input model
-            // if not, build a map from parameters remaining
-            Object body = parameters.isEmpty() ? inputModel
-                    : parameters.entrySet().stream().collect(Collectors.toMap(
-                            Entry::getKey, e -> resolver.apply(e.getValue())));
-            response = request.sendJsonAndAwait(body);
+
+        if (isEmpty(protocol)) {
+            protocol = getParam(parameters, PROTOCOL, String.class, "http");
+            logger.debug("Protocol not specified, using {}", protocol);
+        }
+
+        boolean isSsl = protocol.equalsIgnoreCase("https");
+
+        if (isEmpty(host)) {
+            host = getParam(parameters, HOST, String.class, "localhost");
+            logger.debug("Host not specified, using {}", host);
+        }
+        if (port == -1) {
+            port = getParam(parameters, PORT, Integer.class, isSsl ? DEFAULT_SSL_PORT : DEFAULT_PORT);
+            logger.debug("Port not specified, using {}", port);
+        }
+        if (isEmpty(path)) {
+            path = endPoint;
+            logger.debug("Path is empty, using whole endpoint {}", endPoint);
+        }
+        logger.debug("Invoking request with protocol {} host {} port {} and endpoint {}", protocol, host, port, path);
+        WebClient client = isSsl ? httpsClient : httpClient;
+        HttpRequest<Buffer> request = client.request(method, port, host, path);
+        requestDecorators.forEach(d -> d.decorate(workItem, parameters, request));
+        authDecorators.forEach(d -> d.decorate(workItem, parameters, request));
+        paramsDecorator.decorate(workItem, parameters, request);
+        Duration requestTimeout = getRequestTimeout(parameters);
+        HttpResponse<Buffer> response = method.equals(HttpMethod.POST) || method.equals(HttpMethod.PUT)
+                ? sendJson(request, bodyBuilder.apply(parameters), requestTimeout)
+                : send(request, requestTimeout);
+        int statusCode = response.statusCode();
+        if (statusCode < 200 || statusCode >= 300) {
+            throw new WorkItemExecutionException(Integer.toString(statusCode), "Request for endpoint " + endPoint + " failed with message: " + response.statusMessage());
+        }
+
+        return Optional.of(this.workItemLifeCycle.newTransition("complete", workItem.getPhaseStatus(), Collections.singletonMap(RESULT, resultHandler.apply(response, targetInfo))));
+    }
+
+    private static HttpResponse<Buffer> sendJson(HttpRequest<Buffer> request, Object body, Duration requestTimeout) {
+        if (requestTimeout == null) {
+            return request.sendJsonAndAwait(body);
         } else {
-            response = request.sendAndAwait();
+            return request.sendJson(body).await().atMost(requestTimeout);
         }
-        manager.completeWorkItem(workItem.getStringId(), Collections.singletonMap(RESULT, resultHandler.apply(inputModel,
-                response.bodyAsJsonObject())));
     }
 
-    @Override
-    public void abortWorkItem(KogitoWorkItem workItem, KogitoWorkItemManager manager) {
-        // rest item handler does not support abort
+    private static HttpResponse<Buffer> send(HttpRequest<Buffer> request, Duration requestTimeout) {
+        if (requestTimeout == null) {
+            return request.sendAndAwait();
+        } else {
+            return request.send().await().atMost(requestTimeout);
+        }
     }
 
-    //  package scoped to allow unit test
-    static String resolvePathParams(String endPoint, Map<String, Object> parameters, UnaryOperator<Object> resolver) {
-        Set<String> toRemove = new HashSet<>();
-        int start = endPoint.indexOf('{');
-        if (start == -1) {
-            return endPoint;
-        }
-        StringBuilder sb = new StringBuilder(endPoint);
-        while (start != -1) {
-            int end = sb.indexOf("}", start);
-            if (end == -1) {
-                throw new IllegalArgumentException("malformed endpoint should contain enclosing '}' " + endPoint);
+    private static Duration getRequestTimeout(Map<String, Object> parameters) {
+        Long requestTimeoutInMillis = getParam(parameters, REQUEST_TIMEOUT_IN_MILLIS, Long.class, null);
+        return requestTimeoutInMillis == null ? null : Duration.ofMillis(requestTimeoutInMillis);
+    }
+
+    private Class<?> getTargetInfo(KogitoWorkItem workItem) {
+        WorkItemNode node = (WorkItemNode) ((WorkItemNodeInstance) workItem.getNodeInstance()).getNode();
+        if (node != null) {
+            String varName = node.getIoSpecification().getOutputMappingBySources().get(RESULT);
+            if (varName != null) {
+                return getType(workItem, varName);
             }
-            String key = sb.substring(start + 1, end);
-            Object value = resolver.apply(parameters.get(key));
-            if (value == null) {
-                throw new IllegalArgumentException("missing parameter " + key);
-            }
-            toRemove.add(key);
-            sb.replace(start, end + 1, resolver.apply(parameters.get(key)).toString());
-            start = sb.indexOf("{", end);
         }
-        parameters.keySet().removeAll(toRemove);
-        return sb.toString();
+        logger.warn("no out mapping for {}", RESULT);
+        return null;
     }
 
-    private <T> T getParam(Map<String, Object> parameters, String paramName, Class<T> type) {
-        Object value = parameters.remove(paramName);
-        if (value == null) {
-            throw new IllegalArgumentException("Missing required parameter " + paramName);
+    private Class<?> getType(KogitoWorkItem workItem, String varName) {
+        VariableScope variableScope = (VariableScope) ((ContextResolver) ((NodeInstance) workItem.getNodeInstance()).getNode()).resolveContext(VariableScope.VARIABLE_SCOPE, varName);
+        if (variableScope != null) {
+            Variable variable = variableScope.findVariable(varName);
+            if (variable != null) {
+                return variable.getType().getObjectClass();
+            }
         }
-        if (!type.isAssignableFrom(value.getClass())) {
-            throw new IllegalArgumentException("Parameter paramName should be of type " + type + " but it is of type " +
-                    value.getClass());
-        }
-        return type.cast(value);
+        logger.info("Cannot find definition for variable {}", varName);
+        return null;
     }
 
 }
